#pair[bjs185, smc397], #feature Added high-five button and styled it. Added a darker version for when a user has already high-filed a piece of evidence. Added JS methods to connect with the backend.

--- a/portfolio/src/main/resources/templates/templatesUser/user.html
+++ b/portfolio/src/main/resources/templates/templatesUser/user.html
@@ -13,6 +13,7 @@
     <script rel="script" th:src="@{scripts/user/profile.js}"></script>
     <script rel="script" th:src="@{scripts/user/portfolio.js}"></script>
     <script rel="script" th:src="@{scripts/evidence/saveWeblinks.js}"></script>
+    <script rel="script" th:src="@{scripts/evidence/evidence.js}"></script>
     <script th:inline="javascript">
         const CONTEXT = [[${@environment.getProperty('PORTFOLIO_CONTEXT')}]];
         const USER_ID = [[${pageUser.id}]];
