--- a/portfolio/src/main/resources/static/styles/evidence/evidence.css
+++ b/portfolio/src/main/resources/static/styles/evidence/evidence.css
@@ -64,13 +64,25 @@ html {
     display: flex;
     flex-direction: row;
     vertical-align: middle;
-    margin: auto;
+    width: 80%;
 }
 
-.evidence-title__left-div {
-    display: flex;
-    flex-direction: column;
+.high-fives__button {
+    vertical-align: middle;
+    margin: auto;
+    border-radius: 100px;
+    width: 50px;
+    height: 50px;
+    border: 0;
+    background-color: var(--color-complement);
 }
+
+.evidence-title__high-fives{
+    width: 20%;
+    display: flex;
+    justify-content: center;
+}
+
 
 .evidence-title__weblinks-commits-div {
     display: flex;
@@ -125,9 +137,10 @@ html {
     padding: 5px 0 4px 0;
 }
 
-.evidence-title--icon_container:hover, .evidence-title--icon_container-delete:hover {
+.evidence-title--icon_container:hover, .evidence-title--icon_container-delete:hover, .high-fives__button:hover{
     color: black;
     background-color: rgba(168, 40, 16, 0.3); /* Accent Colour */
+    filter: brightness(120%);
 }
 
 .evidence-title--icon {
@@ -164,7 +177,7 @@ html {
     font-size: 25px;
 }
 
-.evidence-title__child:hover, .evidence__title--icon_container:hover, .evidence-title--icon_container-delete:hover {
+.evidence-title__child:hover {
     color: var(--color-accent);
 }
 
