--- a/portfolio/src/main/resources/templates/templatesUser/register.html
+++ b/portfolio/src/main/resources/templates/templatesUser/register.html
@@ -29,19 +29,21 @@
                 <label>Account Details *</label><br>
 
                 <!--USERNAME-->
-                <input type="text" th:name="username" th:value="${username} ?: ''" minlength="1" maxlength="64" required placeholder="Username (*)" class="required" title="Must not be blank" th:pattern="${isNotBlankPattern}"/><label class="helper" >*Username, must be unique</label><br>
+                <input type="text" th:name="username" th:value="${username} ?: ''" minlength="1" maxlength="64" required placeholder="Username (*)" class="required" title="Must not be blank" th:pattern="${isNotBlankPattern}"/><br>
                 <p th:text="${usernameError}" class="form-error-message"></p>
                 <th:block th:each="validationError: ${validationErrors}" th:if="${validationError.FieldName == 'username'}">
                     <p th:text="${validationError.ErrorText}" class="form-error-message"></p>
                 </th:block>
+
                 <!--EMAIL-->
-                <input type="text" th:name="email" th:value="${email} ?: ''" pattern="^[A-Za-z0-9+_.-]+@(.+)$" minlength="1" maxlength="255" required placeholder="Email (*)" class="required" /><label class="helper" >*Email, must include '@'</label><br>
+                <input type="text" th:name="email" th:value="${email} ?: ''" pattern="^[A-Za-z0-9+_.-]+@(.+)$" minlength="1" maxlength="255" required placeholder="Email (*)" class="required" title="Must be valid format, e.g., abc@gmail.com"/></label><br>
                 <p th:text="${emailError}" class="form-error-message"></p>
                 <th:block th:each="validationError: ${validationErrors}" th:if="${validationError.FieldName == 'email'}">
                     <p th:text="${validationError.ErrorText}" class="form-error-message"></p>
                 </th:block>
+
                 <!--PASSWORD-->
-                <input type="password" th:name="password" minlength="8" maxlength="64" required placeholder="Password (*)" class="required" /><label class="helper" >*Password, must be at least 8 characters</label><br>
+                <input type="password" th:name="password" minlength="8" maxlength="64" required placeholder="Password (*)" class="required" /><br><label class="helper" >*Password, must be at least 8 characters</label><br>
                 <br>
                 <th:block th:each="validationError: ${validationErrors}" th:if="${validationError.FieldName == 'password'}">
                     <p th:text="${validationError.ErrorText}" class="form-error-message"></p>
@@ -50,19 +52,21 @@
                 <label>Full Name *</label><br>
 
                 <!--FIRST NAME-->
-                <input type="text" th:name="firstName" th:value="${firstName} ?: ''" minlength="1" maxlength="64" required placeholder="First Name (*)" class="required" title="Must not be blank" th:pattern="${isNotBlankPattern}"/><label class="helper" >*First Name</label><br>
+                <input type="text" th:name="firstName" th:value="${firstName} ?: ''" minlength="1" maxlength="64" required placeholder="First Name (*)" class="required" title="Must not be blank" th:pattern="${isNotBlankPattern}"/><br>
                 <p th:text="${firstNameError}" class="form-error-message"></p>
                 <th:block th:each="validationError: ${validationErrors}" th:if="${validationError.FieldName == 'firstName'}">
                     <p th:text="${validationError.ErrorText}" class="form-error-message"></p>
                 </th:block>
+
                 <!--MIDDLE NAME-->
-                <input type="text" th:name="middleName" th:value="${middleName} ?: ''" minlength="1" maxlength="64"   placeholder="Middle Name" class="helper" /><label class="helper" >Middle Name</label><br>
+                <input type="text" th:name="middleName" th:value="${middleName} ?: ''" minlength="1" maxlength="64"   placeholder="Middle Name" class="helper" /><br>
                 <p th:text="${middleNameError}" class="form-error-message"></p>
                 <th:block th:each="validationError: ${validationErrors}" th:if="${validationError.FieldName == 'middleName'}">
                     <p th:text="${validationError.ErrorText}" class="form-error-message"></p>
                 </th:block>
+
                 <!--LAST NAME-->
-                <input type="text" th:name="lastName" th:value="${lastName} ?: ''" minlength="1" maxlength="64" required placeholder="Last Name (*)" class="required" title="Must not be blank" th:pattern="${isNotBlankPattern}"/><label class="helper" >*Last Name</label><br>
+                <input type="text" th:name="lastName" th:value="${lastName} ?: ''" minlength="1" maxlength="64" required placeholder="Last Name (*)" class="required" title="Must not be blank" th:pattern="${isNotBlankPattern}"/><br>
                 <p th:text="${lastNameError}" class="form-error-message"></p>
                 <th:block th:each="validationError: ${validationErrors}" th:if="${validationError.FieldName == 'lastName'}">
                     <p th:text="${validationError.ErrorText}" class="form-error-message"></p>
@@ -72,18 +76,20 @@
                 <label>Person Details</label><br>
 
                 <!--NICKNAME-->
-                <input type="text" th:name="nickname" th:value="${nickname} ?: ''" maxlength="64" placeholder="Nickname"/><label class="helper">Nickname</label><br>
+                <input type="text" th:name="nickname" th:value="${nickname} ?: ''" maxlength="64" placeholder="Nickname"/><br>
                 <p th:text="${nicknameError}" class="form-error-message"></p>
                 <th:block th:each="validationError: ${validationErrors}" th:if="${validationError.FieldName == 'nickname'}">
                     <p th:text="${validationError.ErrorText}" class="form-error-message"></p>
                 </th:block>
+
                 <!--PRONOUNS-->
-                <input type="text" th:name="pronouns" th:value="${pronouns} ?: ''" maxlength="64" placeholder="Preferred Pronouns" /><label class="helper">Preferred Pronouns</label><br>
+                <input type="text" th:name="pronouns" th:value="${pronouns} ?: ''" maxlength="64" placeholder="Preferred Pronouns" /><br>
                 <p th:text="${pronounsError}" class="form-error-message"></p>
                 <th:block th:each="validationError: ${validationErrors}" th:if="${validationError.FieldName == 'personalPronouns'}">
                     <p th:text="${validationError.ErrorText}" class="form-error-message"></p>
                 </th:block>
                 <br>
+
                 <!--BIO-->
                 <label>Bio</label><label class="helper"></label><br>
                 <textarea th:name="bio" th:text="${bio} ?: ''" maxlength="1024" placeholder=""></textarea>
