#pair[smc397, bjs185], #feature Turned evidence and high-fives into individual fragments, added controller methods for handling high-fives. Added Javascript method to high-five and update a piece of evidence.

--- a/portfolio/src/main/resources/templates/fragmentsGroup/groupHome.html
+++ b/portfolio/src/main/resources/templates/fragmentsGroup/groupHome.html
@@ -19,7 +19,7 @@
         <div class="col-12 col-lg groupsEvidence">
             <h2>Recent Evidence</h2>
             <div class="evidence__container">
-                <div th:replace="fragments/evidence"></div>
+                <div th:replace="fragments/evidenceList"></div>
             </div>
         </div>
 
