--- a/portfolio/src/main/resources/templates/templatesEvidence/categories.html
+++ b/portfolio/src/main/resources/templates/templatesEvidence/categories.html
@@ -30,7 +30,7 @@
                 Add Evidence
             </a>
         </div>
-        <div th:replace="fragments/evidence"></div>
+        <div th:replace="fragments/evidenceList"></div>
     </div>
     <div class="col-lg">
         <div class="filter-div">
