--- a/portfolio/src/main/resources/static/styles/evidence/evidence.css
+++ b/portfolio/src/main/resources/static/styles/evidence/evidence.css
@@ -78,9 +78,10 @@ html {
 }
 
 .evidence-title__high-fives{
-    width: 20%;
+    width: 10%;
     display: flex;
     justify-content: center;
+    padding-left: 30px;
 }
 
 
@@ -112,7 +113,7 @@ html {
 
 .evidence-title--form {
     padding: 0;
-    width: 90%;
+    width: 85%;
     height: 100%;
     margin: 0;
 }
@@ -157,7 +158,7 @@ html {
     padding: 0;
     height: 5rem;
     line-height: 5rem;
-    width: 24%;
+    width: 22%;
     margin-left: auto;
     cursor: pointer;
     font-size: 18px;
