--- a/portfolio/src/main/resources/templates/fragments/evidence.html
+++ b/portfolio/src/main/resources/templates/fragments/evidence.html
@@ -1,141 +1,129 @@
 <!DOCTYPE html>
 
-<!-- List of Evidence -->
-<div id="evidence__form-wrapper flex-column">
-    <div class="evidence__collapsed" th:each="evidence: ${evidenceList}" th:id="'evidence-' + ${evidence.getId}">
-      <script th:inline="javascript">
+<div class="evidence__collapsed" >
+    <script th:inline="javascript">
         middle_id = [[ ${evidence.getId} ]];
         EVIDENCE_IDS.push(middle_id);
-      </script>
-
-        <!-- Evidence Title !-->
-        <div class="evidence-title__parent flex-row">
-            <div class="evidence-title__child" type="button" data-bs-toggle="collapse"
-                     th:aria-controls="evidence_ + ${evidence.getId}" aria-expanded="false"
-                     th:data-bs-target="'#evidence_' + ${evidence.getId}">
-                <div class="evidence-title__name-date-div">
-                    <h2 class="evidence__title" th:text="${evidence.getTitle}"></h2>
-                    <h3 class="evidence__date" th:text="${evidence.getDateString} "></h3>
+    </script>
+    <!-- Evidence Title !-->
+    <div class="evidence-title__parent flex-row">
+        <div class="evidence-title__child" type="button" data-bs-toggle="collapse"
+             th:aria-controls="evidence_ + ${evidence.getId}" aria-expanded="false"
+             th:data-bs-target="'#evidence_' + ${evidence.getId}">
+            <div class="evidence-title__name-date-div">
+                <h2 class="evidence__title" th:text="${evidence.getTitle}"></h2>
+                <h3 class="evidence__date" th:text="${evidence.getDateString} "></h3>
+            </div>
+            <div class="evidence-title__weblinks-commits-div">
+                <div id="evidence-title__weblinks">
+                    <em class="bi bi-link-45deg" th:text="${evidence.getNumberWeblinks}"></em>
                 </div>
-                  <div class="evidence-title__weblinks-commits-div">
-                      <div id="evidence-title__weblinks">
-                          <em class="bi bi-link-45deg" th:text="${evidence.getNumberWeblinks}"></em>
-                      </div>
-                      <div class="evidence-title__commits">
-                          <em class="bi bi-git" th:text="${evidence.getNumberCommits}"></em>
-                      </div>
-                  </div>
+                <div class="evidence-title__commits">
+                    <em class="bi bi-git" th:text="${evidence.getNumberCommits}"></em>
+                </div>
             </div>
-            <div class="evidence-title__high-fives">
-                <button class="high-fives__button" th:onclick="toggleEvidence([[${evidence.getId}]], [[${pageUser.id}]])">
-                    <svg th:if="!${evidence.hasHighFived(pageUser.id)}" xmlns="http://www.w3.org/2000/svg" width="30px" height="30px" fill="currentColor" class="bi bi-hand-thumbs-up" viewBox="0 0 16 16">
-                        <path d="M8.864.046C7.908-.193 7.02.53 6.956 1.466c-.072 1.051-.23 2.016-.428 2.59-.125.36-.479 1.013-1.04 1.639-.557.623-1.282 1.178-2.131 1.41C2.685 7.288 2 7.87 2 8.72v4.001c0 .845.682 1.464 1.448 1.545 1.07.114 1.564.415 2.068.723l.048.03c.272.165.578.348.97.484.397.136.861.217 1.466.217h3.5c.937 0 1.599-.477 1.934-1.064a1.86 1.86 0 0 0 .254-.912c0-.152-.023-.312-.077-.464.201-.263.38-.578.488-.901.11-.33.172-.762.004-1.149.069-.13.12-.269.159-.403.077-.27.113-.568.113-.857 0-.288-.036-.585-.113-.856a2.144 2.144 0 0 0-.138-.362 1.9 1.9 0 0 0 .234-1.734c-.206-.592-.682-1.1-1.2-1.272-.847-.282-1.803-.276-2.516-.211a9.84 9.84 0 0 0-.443.05 9.365 9.365 0 0 0-.062-4.509A1.38 1.38 0 0 0 9.125.111L8.864.046zM11.5 14.721H8c-.51 0-.863-.069-1.14-.164-.281-.097-.506-.228-.776-.393l-.04-.024c-.555-.339-1.198-.731-2.49-.868-.333-.036-.554-.29-.554-.55V8.72c0-.254.226-.543.62-.65 1.095-.3 1.977-.996 2.614-1.708.635-.71 1.064-1.475 1.238-1.978.243-.7.407-1.768.482-2.85.025-.362.36-.594.667-.518l.262.066c.16.04.258.143.288.255a8.34 8.34 0 0 1-.145 4.725.5.5 0 0 0 .595.644l.003-.001.014-.003.058-.014a8.908 8.908 0 0 1 1.036-.157c.663-.06 1.457-.054 2.11.164.175.058.45.3.57.65.107.308.087.67-.266 1.022l-.353.353.353.354c.043.043.105.141.154.315.048.167.075.37.075.581 0 .212-.027.414-.075.582-.05.174-.111.272-.154.315l-.353.353.353.354c.047.047.109.177.005.488a2.224 2.224 0 0 1-.505.805l-.353.353.353.354c.006.005.041.05.041.17a.866.866 0 0 1-.121.416c-.165.288-.503.56-1.066.56z"/>
-                    </svg>
-                    <svg th:if="${evidence.hasHighFived(pageUser.id)}" xmlns="http://www.w3.org/2000/svg" width="30px" height="30px" fill="currentColor" class="bi bi-hand-thumbs-up-fill" viewBox="0 0 16 16">
-                    <path d="M6.956 1.745C7.021.81 7.908.087 8.864.325l.261.066c.463.116.874.456 1.012.965.22.816.533 2.511.062 4.51a9.84 9.84 0 0 1 .443-.051c.713-.065 1.669-.072 2.516.21.518.173.994.681 1.2 1.273.184.532.16 1.162-.234 1.733.058.119.103.242.138.363.077.27.113.567.113.856 0 .289-.036.586-.113.856-.039.135-.09.273-.16.404.169.387.107.819-.003 1.148a3.163 3.163 0 0 1-.488.901c.054.152.076.312.076.465 0 .305-.089.625-.253.912C13.1 15.522 12.437 16 11.5 16H8c-.605 0-1.07-.081-1.466-.218a4.82 4.82 0 0 1-.97-.484l-.048-.03c-.504-.307-.999-.609-2.068-.722C2.682 14.464 2 13.846 2 13V9c0-.85.685-1.432 1.357-1.615.849-.232 1.574-.787 2.132-1.41.56-.627.914-1.28 1.039-1.639.199-.575.356-1.539.428-2.59z"/>
-                </svg>
-                </button>
-
-            </div>
+        </div>
+        <div class="evidence-title__high-fives" th:id="'evidence-' + ${evidence.getId} + '-highfive'">
+            <div th:replace="fragments/highfive"></div>
+        </div>
     </div>
 
 
     <!-- Evidence Details -->
-        <div class="evidence__details collapse" th:id="evidence_ + ${evidence.getId}">
-            <div class="evidence__details--expanded flex-column" >
-                <h4 class="evidence__description" th:text="${evidence.getDescription} "></h4>
-                <div class="user-tag-con">
-                    <div class="user-tag" th:each="user: ${evidence.getLinkedUsers()}">
-                        <div class="user-tag-inside">
-                            <img class="user-tag-image" th:src="${user.getProfileImagePath()}" alt="Profile Photo">
-                            <div class="user-tag-text" >
-                                <a class="user-tag-fullName" th:href="@{profile-{id}(id=${user.getId()})}" th:text="${user.getFullName()}"></a>
-                                <p class="user-tag-nickname" th:text="${user.getUsername()}"></p>
-                            </div>
+    <div class="evidence__details collapse" th:id="evidence_ + ${evidence.getId}">
+        <div class="evidence__details--expanded flex-column" >
+            <h4 class="evidence__description" th:text="${evidence.getDescription} "></h4>
+            <div class="user-tag-con">
+                <div class="user-tag" th:each="user: ${evidence.getLinkedUsers()}">
+                    <div class="user-tag-inside">
+                        <img class="user-tag-image" th:src="${user.getProfileImagePath()}" alt="Profile Photo">
+                        <div class="user-tag-text" >
+                            <a class="user-tag-fullName" th:href="@{profile-{id}(id=${user.getId()})}" th:text="${user.getFullName()}"></a>
+                            <p class="user-tag-nickname" th:text="${user.getUsername()}"></p>
                         </div>
                     </div>
                 </div>
-                <div class="evidence__categories">
-                    <a th:each="category: ${evidence.getCategories}" class="category__link" th:text="${category}" th:href="@{${owner} ? 'portfolio' : 'portfolio-' + ${evidence.getOwnerId}} + '-categories?category=' + ${category}"></a>
-                </div>
-                <div class="evidence__skills">
-                    <a th:each="skill: ${evidence.getSkills}"  class="skill__link" th:text="${skill.replaceAll('_', ' ')}" th:href="@{${owner} ? 'portfolio' : 'portfolio-' + ${evidence.getOwnerId}} + '-skill?skill=' + ${skill}"></a>
-                </div>
-                <!-- Commits -->
-                <h4 th:if="${evidence.getNumberCommits() >  0}" class="evidence-form__commits-title">Linked Commits</h4>
-                <div class="evidence-form__commit-details" th:if="${evidence.getCommits().size() >  0}" th:each="commit: ${evidence.getCommits}">
-                  <div class="evidence-form__commits-details">
+            </div>
+            <div class="evidence__categories">
+                <a th:each="category: ${evidence.getCategories}" class="category__link" th:text="${category}" th:href="@{${owner} ? 'portfolio' : 'portfolio-' + ${evidence.getOwnerId}} + '-categories?category=' + ${category}"></a>
+            </div>
+            <div class="evidence__skills">
+                <a th:each="skill: ${evidence.getSkills}"  class="skill__link" th:text="${skill.replaceAll('_', ' ')}" th:href="@{${owner} ? 'portfolio' : 'portfolio-' + ${evidence.getOwnerId}} + '-skill?skill=' + ${skill}"></a>
+            </div>
+            <!-- Commits -->
+            <h4 th:if="${evidence.getNumberCommits() >  0}" class="evidence-form__commits-title">Linked Commits</h4>
+            <div class="evidence-form__commit-details" th:if="${evidence.getCommits().size() >  0}" th:each="commit: ${evidence.getCommits}">
+                <div class="evidence-form__commits-details">
                     <div class="evidence-form__commits-link-container">
-                      <p class="evidence-form__commits-link" th:text="'Commit: '"></p>
-                      <a class="evidence-form__commits-link" th:href="${commit.getLink}" target="_blank" th:text="${commit.getCommitNo}"></a>
+                        <p class="evidence-form__commits-link" th:text="'Commit: '"></p>
+                        <a class="evidence-form__commits-link" th:href="${commit.getLink}" target="_blank" th:text="${commit.getCommitNo}"></a>
                     </div>
                     <p class="evidence-form__commits-message" th:text="${commit.getDescription}"></p>
                     <div class="evidence-form__commits-date-author-container">
-                      <p class="evidence-form__commits-author" th:text="'Author: ' +${commit.getAuthor}"></p>
-                      <p class="evidence-form__commits-date" th:text="'Date: ' +${commit.getDateString}"></p>
-                    </div>
-                  </div>
-                </div>
-<!--              WebLinks-->
-                <div class="web-link__container">
-                  <div class="web-link__header-wrapper">
-                    <div th:if="${evidence.getNumberWeblinks() >  0}">
-                      <h4 class="web-link-title">Web Links</h4>
-                    </div>
-                    <div class="evidence__button-wrapper flex-row">
-                      <div th:if="${(evidence.getNumberWeblinks() <  maxWeblinks) && owner}" id="add-weblink-button__div">
-                        <button id="weblink-button" type="button" class="btn-fill-primary" data-bs-toggle="modal"
-                                th:data-bs-target="'#addingWeblink_' + ${evidence.getId}" th:data-evidenceId="${evidence.getId}"
-                                onclick="setIndex(-1); clearModel(this.getAttribute('data-evidenceId'))">
-                          Add Weblink
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-                    <div th:id="web-link__wrapper_ + ${evidence.getId}">
-                    </div>
-                  <br/>
-                </div>
-                <!-- Edit/Delete icons -->
-                <div class="evidence-title-div__buttons">
-                    <div th:if="${owner}" class="evidence-title-div__button">
-                        <form action="#" class="evidence-title--form" th:action="@{deleteEvidence-{evidenceId}(evidenceId=${evidence.getId})}" th:onSubmit="return confirm('Are you sure you want to delete evidence: ' + [[${evidence.getTitle}]] + '?\nThis action cannot be undone.')" th:method="delete" >
-                            <button type="submit" class="evidence-title--icon_container-delete">
-                                <em class="bi bi-trash evidence-title--icon"></em>
-                            </button>
-                        </form>
-                    </div>
-
-                    <div th:if="${owner}" class="evidence-title-div__button">
-                        <a class="evidence-title--icon_container" th:href="@{editEvidence-{evidenceId}(evidenceId=${evidence.getId})}">
-                            <em class="bi bi-pencil-square evidence-title--icon"></em>
-                        </a>
+                        <p class="evidence-form__commits-author" th:text="'Author: ' +${commit.getAuthor}"></p>
+                        <p class="evidence-form__commits-date" th:text="'Date: ' +${commit.getDateString}"></p>
                     </div>
                 </div>
             </div>
-        </div>
+            <!--              WebLinks-->
+            <div class="web-link__container">
+                <div class="web-link__header-wrapper">
+                    <div th:if="${evidence.getNumberWeblinks() >  0}">
+                        <h4 class="web-link-title">Web Links</h4>
+                    </div>
+                    <div class="evidence__button-wrapper flex-row">
+                        <div th:if="${(evidence.getNumberWeblinks() <  maxWeblinks) && owner}" id="add-weblink-button__div">
+                            <button id="weblink-button" type="button" class="btn-fill-primary" data-bs-toggle="modal"
+                                    th:data-bs-target="'#addingWeblink_' + ${evidence.getId}" th:data-evidenceId="${evidence.getId}"
+                                    onclick="setIndex(-1); clearModel(this.getAttribute('data-evidenceId'))">
+                                Add Weblink
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div th:id="web-link__wrapper_ + ${evidence.getId}">
+                </div>
+                <br/>
+            </div>
+            <!-- Edit/Delete icons -->
+            <div class="evidence-title-div__buttons">
+                <div th:if="${owner}" class="evidence-title-div__button">
+                    <form action="#" class="evidence-title--form" th:action="@{deleteEvidence-{evidenceId}(evidenceId=${evidence.getId})}" th:onSubmit="return confirm('Are you sure you want to delete evidence: ' + [[${evidence.getTitle}]] + '?\nThis action cannot be undone.')" th:method="delete" >
+                        <button type="submit" class="evidence-title--icon_container-delete">
+                            <em class="bi bi-trash evidence-title--icon"></em>
+                        </button>
+                    </form>
+                </div>
 
-        <!-- Modal -->
-        <div class="modal fade" th:id="addingWeblink_ + ${evidence.getId}" tabindex="-1" role="dialog" aria-labelledby="modalTitle" aria-hidden="true">
-            <div class="modal-dialog modal-dialog-centered" role="document">
-                <div class="modal-content">
-                    <div class="modal-header weblink-modal__header">
-                        <h5 class="modal-title" id="modalTitle">Save Weblink</h5>
-                        <button type="button" class="btn-close close-button" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="weblink-modal__wrapper">
-                        <form id="weblink__modal" class="flex-column" th:data-evidenceId="${evidence.getId}" onsubmit="saveWebLink(this.getAttribute('data-evidenceId')); return false;" th:method="post">
-                          <label> Name </label>
-                            <input type="text" th:id="weblink-modal__name-field_ + ${evidence.getId}" name="webLinkName" maxlength="64" placeholder="WebLink Name" th:value="${webLinkName}">
-                            <label> Link *</label>
-                            <input type="url" th:id="weblink-modal__link-field_ + ${evidence.getId}" name="webLink" placeholder="WebLink" oninvalid="this.setCustomValidity('Incorrect Web Link Format. Example: \'http(s)://example.com\'')" oninput="this.setCustomValidity('')" th:value="${webLink}" required>
-                            <p id="weblink-incorrect" hidden>Incorrect Web Link Format. Example: 'http(s)://example.com'</p>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Discard</button>
-                                <button type="submit" class="btn btn-primary">Save</button>
-                            </div>
-                        </form>
-                    </div>
+                <div th:if="${owner}" class="evidence-title-div__button">
+                    <a class="evidence-title--icon_container" th:href="@{editEvidence-{evidenceId}(evidenceId=${evidence.getId})}">
+                        <em class="bi bi-pencil-square evidence-title--icon"></em>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" th:id="addingWeblink_ + ${evidence.getId}" tabindex="-1" role="dialog" aria-labelledby="modalTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header weblink-modal__header">
+                    <h5 class="modal-title" id="modalTitle">Save Weblink</h5>
+                    <button type="button" class="btn-close close-button" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="weblink-modal__wrapper">
+                    <form id="weblink__modal" class="flex-column" th:data-evidenceId="${evidence.getId}" onsubmit="saveWebLink(this.getAttribute('data-evidenceId')); return false;" th:method="post">
+                        <label> Name </label>
+                        <input type="text" th:id="weblink-modal__name-field_ + ${evidence.getId}" name="webLinkName" maxlength="64" placeholder="WebLink Name" th:value="${webLinkName}">
+                        <label> Link *</label>
+                        <input type="url" th:id="weblink-modal__link-field_ + ${evidence.getId}" name="webLink" placeholder="WebLink" oninvalid="this.setCustomValidity('Incorrect Web Link Format. Example: \'http(s)://example.com\'')" oninput="this.setCustomValidity('')" th:value="${webLink}" required>
+                        <p id="weblink-incorrect" hidden>Incorrect Web Link Format. Example: 'http(s)://example.com'</p>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Discard</button>
+                            <button type="submit" class="btn btn-primary">Save</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
