#Feature #Test Finished implementing the getting group evidence filtered by categories. Also, added Junit tests to it as well.

--- a/portfolio/src/main/resources/templates/fragmentsGroup/groupHome.html
+++ b/portfolio/src/main/resources/templates/fragmentsGroup/groupHome.html
@@ -42,8 +42,8 @@
                 <!-- Categories Tab -->
                 <h2>Categories</h2>
                 <div class="categories__details">
-                    <a class="no-category__link" th:href="@{${owner} ? 'portfolio' : 'portfolio-' + ${pageUser.id}} + '-categories?category='">No Category</a>
-                    <a class="category__link" th:each="category: ${categoryList}" th:text="${category}" th:href="@{${owner} ? 'portfolio' : 'portfolio-' + ${pageUser.id}} + '-categories?category=' + ${category}"></a>
+                    <button class="no-category__link" onclick="fetchEvidenceWithCategories('#no_categories')">No Category</button>
+                    <button class="category__link" th:each="category: ${categoryList}" th:text="${category}" th:attr="onclick=|fetchEvidenceWithCategories('${category}')|"></button>
                 </div>
             </div>
             <div class="skills">
