--- a/portfolio/src/main/resources/templates/templatesGroup/groups.html
+++ b/portfolio/src/main/resources/templates/templatesGroup/groups.html
@@ -60,7 +60,7 @@
                                     </thead>
                                     <tbody>
                                     <tr th:each="member : ${group.getMembers}"
-                                        th:with="rowDraggable=${authUserIsTeacher}"
+                                        th:with="rowDraggable=${user.isTeacher}"
                                         th:draggable="${rowDraggable}"
                                         th:ontouchstart="${rowDraggable} ? 'toggleRowMobile(this)' : ''"
                                         th:onmousedown="${rowDraggable} ? 'copyMembers(this)' : ''"
@@ -80,7 +80,7 @@
                         <form th:action="@{group-{id}(id=${group.getGroupId})}" th:method="get" th:if="${group.getGroupId} >= 0")>
                             <button type="submit">View</button>
                         </form>
-                        <div class="flex-row" th:if="${authUserIsTeacher || #lists.contains(group.getMembers, user)}">
+                        <div class="flex-row" th:if="${user.isTeacher || #lists.contains(group.getMembers, user)}">
                             <button th:id="${group.getGroupId}" th:data-group-id="group_ + ${group.getGroupId}" onclick="copyHere(this.getAttribute('data-group-id'))" hidden="hidden" th:class="groups__copy-member-mobile">Copy</button>
                             <button onclick="removeSelectedUsers(this)" hidden="hidden" th:class="'group_' + ${group.getGroupId} + '_remove_users_button'">Remove Selected Users</button>
                             <form th:action="@{editGroup-{id}(id=${group.getGroupId})}" th:method="get" th:if="${group.getGroupId} >= 0")>
