#Feature #Refactor Tidy up profile css, add colours, make tabs highlight on active.

--- a/portfolio/src/main/resources/static/styles/theme.css
+++ b/portfolio/src/main/resources/static/styles/theme.css
@@ -1,11 +1,11 @@
 :root {
-    --berry: #f6db9a;
+    --berry: #ef798a;
     --forest: #b5d99c;
     --peach: #f6b08b;
     --steel: #bbadf0;
     --cobalt: #9bbeff;
 
-    --charcoal: #1e1e22ff;
+    --charcoal: #1e1e22;
     --slate: #2b2b33;
     --stone: #383842;
     --lightgrey: #848494;
