--- a/portfolio/src/main/resources/static/styles/user/user.css
+++ b/portfolio/src/main/resources/static/styles/user/user.css
@@ -2,13 +2,17 @@
 
 #user-header {
     padding: 15px 15px 15px 15px;
-    border: 1px solid var(--primary-highlight);
+    /*border: 1px solid var(--primary-highlight);*/
     /*background-image: linear-gradient(180deg, var(--surface-highlight), var(--surface) 90%);*/
     background-color: var(--surface);
     color: var(--primary-highlight);
-    border-radius: 10px;
+    border-radius: 8px;
+    box-shadow: 0 4px 10px 1px rgb(0 0 0 / 10%);
 }
 
+h1 {
+    margin: 0 !important;
+}
 
 .carousel-buttons {
     margin-top: 1rem;
@@ -20,9 +24,10 @@
 /* User tab buttons */
 .user-tab__button {
     color: var(--text-surface);
-    border: 1px solid var(--primary-highlight);
+    /*border: 1px solid var(--primary-highlight);*/
+    border: 0;
     background-color: var(--surface);
-    border-radius: 3px;
+    border-radius: 8px;
     height: 3rem;
     box-shadow: none;
     width: 100%;
@@ -35,6 +40,11 @@
     height: 3rem;
     box-shadow: none;
     font-size: 1.5rem;
+}
+
+.active-carousel-tab {
+    color: var(--background);
+    background-color: var(--primary-highlight);
 }
 
 /* User Statistics Tab */
