--- a/portfolio/src/main/resources/templates/templatesUser/user.html
+++ b/portfolio/src/main/resources/templates/templatesUser/user.html
@@ -16,6 +16,7 @@
     <script rel="script" th:src="@{scripts/user/portfolio.js}"></script>
     <script rel="script" th:src="@{scripts/evidence/saveWeblinks.js}"></script>
     <script rel="script" th:src="@{scripts/user/userStatistics.js}"></script>
+    <script rel="script" th:src="@{scripts/user/user.js}"></script>
     <script th:inline="javascript">
         const CONTEXT = [[${@environment.getProperty('PORTFOLIO_CONTEXT')}]];
         const USER_ID = [[${pageUser.id}]];
@@ -28,7 +29,7 @@
     </script>
 </head>
 
-<body class="light cobalt">
+<body class="dark cobalt">
 <!-- Import the application's header bar. -->
 <header th:replace="fragments/header :: header"></header>
 <!-- Import the application's navigation bar. -->
@@ -43,13 +44,13 @@
     </div>
 
     <div class="carousel-buttons flex-row">
-        <button type="button" class="user-tab__button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0">
+        <button type="button" class="user-tab__button active-carousel-tab" onclick="makeActive(this)" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0">
             <span>Profile</span>
         </button>
-        <button type="button" class="user-tab__button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1">
+        <button type="button" class="user-tab__button" onclick="makeActive(this)" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1">
             <span>Portfolio</span>
         </button>
-        <button type="button" class="user-tab__button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2">
+        <button type="button" class="user-tab__button" onclick="makeActive(this)" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2">
             <span>Statistics</span>
         </button>
     </div>
