--- a/portfolio/src/main/resources/templates/templatesUser/user.html
+++ b/portfolio/src/main/resources/templates/templatesUser/user.html
@@ -43,7 +43,7 @@
         </header>
     </div>
 
-    <div class="carousel-buttons flex-row">
+    <div class="carousel-buttons">
         <button type="button" class="user-tab__button active-carousel-tab" onclick="makeActive(this)" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0">
             <span>Profile</span>
         </button>
