--- a/portfolio/src/main/resources/static/styles/user/profile.css
+++ b/portfolio/src/main/resources/static/styles/user/profile.css
@@ -10,7 +10,7 @@
     border-radius: 8px;
     background-color: var(--surface);
     padding: 20px;
-    margin: 100px auto;
+    margin: 1rem auto;
     box-shadow: 0 4px 10px 1px rgb(0 0 0 / 10%);
 }
 
