--- a/portfolio/src/main/resources/static/styles/user/user.css
+++ b/portfolio/src/main/resources/static/styles/user/user.css
@@ -22,7 +22,7 @@ h1 {
     border-radius: 6px;
     box-shadow: 0 4px 10px 1px rgb(0 0 0 / 10%);
     width:fit-content;
-    margin: 1rem auto;
+    margin: 2rem 0;
 }
 
 /* User tab buttons */
