#Feature update css for evidence and modal.

--- a/portfolio/src/main/resources/static/styles/theme.css
+++ b/portfolio/src/main/resources/static/styles/theme.css
@@ -21,7 +21,7 @@
     --text-faded: var(--lightgrey);
     --text-background: var(--cloud);
     --text-surface: var(--cloud);
-    --text-surface-inverse: var(--charcoal);
+    --text-surface-highlight: var(--charcoal);
 }
 
 .light {
@@ -33,7 +33,7 @@
     --text-faded: hsl(240, 1%, 40%);
     --text-backround: hsl(0, 0%, 7%);
     --text-surface: hsl(0, 0%, 7%);
-    --text-surface-inverse: hsl(0, 0%, 100%);
+    --text-surface-highlight: hsl(0, 0%, 100%);
 }
 
 .berry {
