--- a/portfolio/src/main/resources/static/styles/navbar.css
+++ b/portfolio/src/main/resources/static/styles/navbar.css
@@ -16,7 +16,7 @@
     padding: 0;
     overflow: hidden;
     background-color: var(--primary-highlight);
-    color: var(--text-surface-inverse);
+    color: var(--text-surface-highlight);
     list-style-type: none;
 }
 
@@ -154,12 +154,12 @@
 
 .site-navigation__link.active {
     background-color: var(--primary-highlight); /* Accent Colour */
-    color: var(--text-surface-inverse) !important;
+    color: var(--text-surface-highlight) !important;
 }
 
 .site-navigation__link:hover {
     background-color: var(--primary-highlight); /* Accent Colour */
-    color: var(--text-surface-inverse) !important;
+    color: var(--text-surface-highlight) !important;
     text-decoration: none;
 }
 
@@ -209,12 +209,12 @@
 
 #projects-button.active {
     background-color: var(--primary-highlight);
-    color: var(--text-surface-inverse) !important;
+    color: var(--text-surface-highlight) !important;
 }
 
 #projects-button:hover {
     background-color: var(--primary-highlight);
-    color: var(--text-surface-inverse) !important;
+    color: var(--text-surface-highlight) !important;
     text-decoration: none;
 }
 
