--- a/portfolio/src/main/resources/templates/templatesUser/user.html
+++ b/portfolio/src/main/resources/templates/templatesUser/user.html
@@ -44,10 +44,10 @@
     </div>
 
     <div class="carousel-buttons">
-        <button type="button" class="user-tab__button active-carousel-tab" onclick="makeActive(this)" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0">
+        <button type="button" class="user-tab__button" th:classappend="${!portfolioSelected} ? 'active-carousel-tab'" onclick="makeActive(this)" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0">
             <span>Profile</span>
         </button>
-        <button type="button" class="user-tab__button" onclick="makeActive(this)" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1">
+        <button type="button" class="user-tab__button" th:classappend="${portfolioSelected} ? 'active-carousel-tab'" onclick="makeActive(this)" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1">
             <span>Portfolio</span>
         </button>
         <button type="button" class="user-tab__button" onclick="makeActive(this)" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2">
