--- a/portfolio/src/main/resources/static/styles/evidence/evidence.css
+++ b/portfolio/src/main/resources/static/styles/evidence/evidence.css
@@ -1,13 +1,3 @@
-:root {
-    /* CSS variables */
-    --color-primary: #FBAA60;
-    --color-secondary: #FADFC6FF;
-    --color-tertiary: #F67B50;
-    --color-complement: #F4EAE6;
-    --color-accent: #A82810;
-}
-
-
 /* Hide scrollbar */
 html::-webkit-scrollbar {
     /* Chrome, Safari, Opera */
@@ -40,9 +30,9 @@ html {
 .evidence__button-wrapper button {
     padding-top: 0;
     padding-bottom: 0;
-    border: 1px solid var(--color-accent);
+    /*border: 1px solid var(--color-accent);*/
     border-radius: 5px;
-    background-color: var(--color-complement);
+    /*background-color: var(--color-complement);*/
 }
 
 .web-link-title {
@@ -391,5 +381,5 @@ p {
 }
 
 .user-tag-nickname {
-    color: #636363;
+    color: var(--text-surface);
 }
