--- a/portfolio/src/main/resources/static/styles/evidence/portfolio.css
+++ b/portfolio/src/main/resources/static/styles/evidence/portfolio.css
@@ -50,20 +50,18 @@
 }
 
 .add-evidence__button {
-    border: 1px solid var(--color-accent);
-    border-radius: 10px;
-    background-color: var(--color-complement);
+    border-radius: 8px;
+    background-color: var(--primary-highlight);
     padding: 10px;
     font-size: 20px;
     text-decoration: none;
-    color: black;
+    color: var(--text-surface);
     width: fit-content;
+    border: none;
 }
 
 .add-evidence__button:hover {
-    color: #f78e55;
-    border-color: #f78e55;
-    background-color: #f4ebe6;
+    color: var(--text-surface-highlight);
     box-shadow: none !important;
 }
 
@@ -77,7 +75,7 @@
     padding-top: 10px;
     display: flex;
     flex-wrap: wrap;
-    border-bottom: 1px solid var(--color-accent);
+    border-bottom: 1px solid var(--primary-highlight);
     padding-bottom: 30px;
 }
 
@@ -121,20 +119,21 @@
 }
 
 .web-link-title {
-    border-bottom: 1px solid var(--color-accent);
+    border-bottom: 1px solid var(--primary-highlight);
     width: fit-content;
 }
 
 .evidence-form__commits-title {
-    border-bottom: 1px solid var(--color-accent);
+    border-bottom: 1px solid var(--primary-highlight);
     width: fit-content;
 }
 
 .filter-div {
-    background-color: var(--color-secondary);
+    background-color: var(--surface);
     margin: 5px;
     padding: 10px;
     border-radius: 5px;
+    box-shadow: 0 4px 10px 1px rgb(0 0 0 / 10%);
 }
 
 .categories__details {
@@ -142,7 +141,7 @@
     padding-bottom: 30px;
     display: flex;
     flex-wrap: wrap;
-    border-bottom: 1px solid var(--color-accent);
+    border-bottom: 1px solid var(--primary-highlight);
 }
 
 .all-evidence-link {
