--- a/portfolio/src/main/resources/templates/templatesUser/login.html
+++ b/portfolio/src/main/resources/templates/templatesUser/login.html
@@ -9,7 +9,7 @@
     <link th:href="@{styles/user/loginPage.css}" rel="stylesheet"/>
 
 </head>
-<body class="dark forest">
+<body class="dark cobalt">
 <div class="container">
     <div class="wrapper">
         <div class="title"><span>Login</span></div>
