--- a/portfolio/src/main/resources/templates/templatesUser/register.html
+++ b/portfolio/src/main/resources/templates/templatesUser/register.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <title>Sign Up</title>
     <link rel="shortcut icon" type="image/ico" th:href="@{${@environment.getProperty('PORTFOLIO_CONTEXT')} + '/favicon.ico'}"/>
+    <link th:href="@{styles/theme.css}" rel="stylesheet"/>
     <link th:href="@{styles/user/registerPage.css}" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
 
 </head>
-<body>
+<body class="dark cobalt">
     <div class="container">
         <div class="wrapper">
             <div class="title"><span>Register</span></div>
