#feature Added JavaScript for toggleHighFive in groups page so evidence can be liked within the recent evidence. Added some documentation to code. Removed path and made it <i> tag fixed css as a result.

--- a/portfolio/src/main/resources/static/styles/evidence/evidence.css
+++ b/portfolio/src/main/resources/static/styles/evidence/evidence.css
@@ -75,7 +75,9 @@ html {
     height: 50px;
     border: 0;
     background-color: var(--color-complement);
+    font-size: 30px;
 }
+
 
 .evidence-title__high-fives{
     width: 10%;
