#Feature Added additional styling to the change password form

--- a/portfolio/src/main/resources/static/styles/user/registerPage.css
+++ b/portfolio/src/main/resources/static/styles/user/registerPage.css
@@ -173,3 +173,9 @@ textarea {
     border-radius: 5px;
     border: 1px solid lightgrey;
 }
+
+hr {
+    height: 3px;
+    border: none;
+    color: var(--outline);
+}
