--- a/portfolio/src/main/resources/templates/templatesUser/register.html
+++ b/portfolio/src/main/resources/templates/templatesUser/register.html
@@ -21,7 +21,7 @@
             <!-- form posts the params to the register controller-->
             <form th:action="@{'register'}"  method="post">
                 <div>
-                    <label class="subtitle">Account Details</label><br>
+                    <label class="subtitle">Account Details</label><hr><br>
 
                     <!--USERNAME-->
                     <div class="row">
