#fix #pair[bjs185, smc397] fixed issue with CSS causing items not sitting in the right place on the groups page.

--- a/portfolio/src/main/resources/templates/fragmentsGroup/groupHome.html
+++ b/portfolio/src/main/resources/templates/fragmentsGroup/groupHome.html
@@ -16,14 +16,14 @@
 <div class="group-home">
     <div class="row">
 
-        <div class="col-12 col-lg groupsEvidence">
+        <div class="col-lg-8 groupsEvidence">
             <h2>Recent Evidence</h2>
             <div class="evidence__container">
                 <div th:replace="fragments/evidenceList"></div>
             </div>
         </div>
 
-        <div class="col-12 col-lg-5">
+        <div class="col-lg">
                 <div class="group-members">
                         <h2>Group Members</h2>
 
