#Feature added accordion for them switch to be in.

--- a/portfolio/src/main/resources/static/styles/stylesheet.css
+++ b/portfolio/src/main/resources/static/styles/stylesheet.css
@@ -12,6 +12,9 @@
 
 
 /******************** Elements ********************/
+body html {
+    height: 100%;
+}
 
 body {
     font-family: Arial, sans-serif;
