--- a/portfolio/src/main/resources/static/styles/navbar.css
+++ b/portfolio/src/main/resources/static/styles/navbar.css
@@ -8,7 +8,6 @@
     display: flex;
     flex-direction: row;
 }
-
 /******************** Top Navigation bar ********************/
 
 #page-header {
@@ -113,10 +112,15 @@
 }
 
 .site-navigation__list {
-    flex-wrap: wrap;
+    height: 90%;
+    display: flex;
+    flex-direction: column;
+    /*flex-wrap: wrap;*/
     padding: 0;
     text-align: center;
     list-style: none;
+    justify-content: space-evenly;
+    margin: 0 !important;
 }
 
 .site-navigation__item {
@@ -266,4 +270,51 @@
     text-decoration: none !important;
     color: var(--text-surface);
     font-weight: 200;
+}
+
+/*.theme__dropdown {*/
+/*    background-color: var(--surface);*/
+/*    color: var(--text-surface);*/
+/*    border: none;*/
+/*    */
+/*}*/
+
+/*.theme__dropdown:hover {*/
+/*    background-color: var(--primary-highlight);*/
+/*    color: var(--text-surface-highlight);*/
+/*}*/
+
+.accordion-item {
+    outline: none !important;
+    border: none !important;
+    background-color: var(--surface);
+}
+
+.accordion-button:not(.collapsed) {
+    background-color: var(--surface);
+    color: var(--text-surface);
+    border: none !important;
+    outline: none !important;
+    box-shadow: none;
+}
+
+.accordion-button.collapsed {
+    background-color: var(--surface);
+    color: var(--text-surface);
+    border: none !important;
+    outline: none !important;
+}
+
+.accordion-button:focus {
+    box-shadow: none;
+    border: none !important;
+    outline: none !important;
+}
+
+.accordion-button.collapsed::after {
+    background-image: var(--carat)
+}
+
+.accordion-button:not(.collapsed)::after {
+    background-image: var(--carat);
 }
