--- a/portfolio/src/main/resources/static/styles/theme.css
+++ b/portfolio/src/main/resources/static/styles/theme.css
@@ -10,6 +10,10 @@
     --stone: #383842;
     --lightgrey: #848494;
     --cloud: #eceaf0;
+
+    --carat-cloud: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23eceaf0'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+    --carat-charcoal: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%231e1e22'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+
 }
 
 .dark {
@@ -22,6 +26,7 @@
     --text-background: var(--cloud);
     --text-surface: var(--cloud);
     --text-surface-highlight: var(--charcoal);
+    --carat: var(--carat-cloud);
 }
 
 .light {
@@ -34,6 +39,7 @@
     --text-backround: hsl(0, 0%, 7%);
     --text-surface: hsl(0, 0%, 7%);
     --text-surface-highlight: hsl(0, 0%, 100%);
+    --carat: var(--carat-charcoal);
 }
 
 .berry {
